logs/arq.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aioredis'...
Listing './lib/python3.5/site-packages/aioredis/commands'...
Listing './lib/python3.5/site-packages/aioredis/sentinel'...
Listing './lib/python3.5/site-packages/aioredis-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/arq'...
Compiling './lib/python3.5/site-packages/arq/drain.py'...
***   File "./lib/python3.5/site-packages/arq/drain.py", line 55
    self.pending_tasks: Set[asyncio.futures.Future] = set()
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arq/jobs.py'...
***   File "./lib/python3.5/site-packages/arq/jobs.py", line 33
    msgpack_encoder: Callable = None
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arq/main.py'...
***   File "./lib/python3.5/site-packages/arq/main.py", line 22
    raise AssertionError(f'{cls} looks like it has duplicated queue names: {queues}')
                                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arq/worker.py'...
***   File "./lib/python3.5/site-packages/arq/worker.py", line 103
    self.queues: List[str] = queues
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/arq-0.8.egg-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/hiredis'...
Listing './lib/python3.5/site-packages/hiredis-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
